# py-pace

./: README.md  main.py  pyproject.toml
src/py_pace/: config.py  main.py
