[project]
name = "py-pace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
    "sqlmodel>=0.0.37",
    "typer>=0.24.1",
]

[project.scripts]
py-pace = "py_pace.main:app"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
